@@ -22,6 +22,7 @@ import javax.annotation.Nonnull;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class GCYSMetaBlocks {
 
@@ -79,10 +80,10 @@ public class GCYSMetaBlocks {
     @Nonnull
     private static String statePropertiesToString(@Nonnull Map<IProperty<?>, Comparable<?>> properties) {
         StringBuilder stringbuilder = new StringBuilder();
-        List<Map.Entry<IProperty<?>, Comparable<?>>> entries = properties.entrySet().stream().sorted(Comparator.comparing((c) -> c.getKey().getName())).toList();
+        List<Map.Entry<IProperty<?>, Comparable<?>>> entries = properties.entrySet().stream().sorted(Comparator.comparing((c) -> c.getKey().getName())).collect(Collectors.toList());
 
         for (Map.Entry<IProperty<?>, Comparable<?>> iPropertyComparableEntry : entries) {
-            if (!stringbuilder.isEmpty()) {
+            if (stringbuilder.length() != 0) {
                 stringbuilder.append(",");
             }
 
@@ -92,7 +93,7 @@ public class GCYSMetaBlocks {
             stringbuilder.append(getPropertyName(property, (Comparable<?>) ((Map.Entry<?, ?>) iPropertyComparableEntry).getValue()));
         }
 
-        if (stringbuilder.isEmpty()) {
+        if (stringbuilder.length() == 0) {
             stringbuilder.append("normal");
         }
 
